--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ rusqlite = { version = "0.28.0", features = ["bundled"] }
 serde = { version = "1.0.152", features = ["derive"]}
 sysinfo = "0.27.7"
 futures = "0.3.26"
+rand = "0.8.5"
 
 [dev-dependencies]
 criterion = "0.3"
